[gd_scene load_steps=9 format=3 uid="uid://bfy3si1bidwxu"]

[ext_resource type="Texture2D" uid="uid://d2s3mxcjusdkh" path="res://Assets/Opdelt porte/milktea_port_h.png" id="1_p7g2s"]
[ext_resource type="Texture2D" uid="uid://br6x1k4rsoif4" path="res://Assets/Opdelt porte/milktea_port_v.png" id="2_phdqc"]
[ext_resource type="Script" path="res://Assets/Port v2/milktea_v.gd" id="3_80ua3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ew4wc"]
size = Vector2(66, 20)

[sub_resource type="Animation" id="Animation_6bkck"]
resource_name = "milktea_port_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("milktea_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("milktea_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_osx5w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("milktea_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("milktea_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_7c8uj"]
resource_name = "milktea_port_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("milktea_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("milktea_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ufev4"]
_data = {
"RESET": SubResource("Animation_osx5w"),
"milktea_port_close": SubResource("Animation_7c8uj"),
"milktea_port_open": SubResource("Animation_6bkck")
}

[node name="milktea_port" type="StaticBody2D"]

[node name="milktea_h" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("1_p7g2s")

[node name="milktea_v" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("2_phdqc")
script = ExtResource("3_80ua3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_ew4wc")

[node name="ap_milktea" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ufev4")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="milktea_v" method="close_port"]
